Add AI prompt result mapping support